--- a/Examination/PAT/PAT2022/.vscode/settings.json
+++ b/Examination/PAT/PAT2022/.vscode/settings.json
@@ -56,6 +56,7 @@
         "span": "cpp",
         "regex": "cpp",
         "valarray": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "variant": "cpp"
     }
 }
